tests/custom/STARIS_2022/operation-type-errors/hist-type-error/stderr.expected
Error:
    Parser error in file: hist-type-error.essence Error is:
ValidatorError hist-type-error.essence:2:21:
  |
2 | such that b = (hist(false) = hist(false))
  |                     ^^^^^
Type error:
	Expected:"Matrix, List or MSet"
	Got: bool

hist-type-error.essence:2:35:
  |
2 | such that b = (hist(false) = hist(false))
  |                                   ^^^^^
Type error:
	Expected:"Matrix, List or MSet"
	Got: bool

